# basketball-photos

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: opencode-review.yml  opencode.yml
config/: settings.yaml
data/: nba_raw_data.db
reports/: analysis_results.json  analysis_summary.json  discovery_results.json
src/: __init__.py  cli.py  cli_options.py  cli_output.py  logging_config.py
src/analyzer/: __init__.py  batch_tracker.py  grading_rubric.py  image_analyzer.py  jersey_ocr.py  metadata_extractor.py  player_detector.py  player_identifier.py  roster_matcher.py
src/categorizer/: __init__.py  classifier.py  tagger.py
src/config/: __init__.py  loader.py
src/grader/: __init__.py  comparator.py  threshold_manager.py
src/scraper/: __init__.py  downloader.py  http.py  photo_discovery.py  sources.py
src/storage/: __init__.py  database.py  json_store.py  player_store.py  review_queue.py
src/types/: __init__.py  analysis.py  config.py  errors.py  photo.py  player_identification.py  scores.py
tests/: __init__.py  test_analysis_pipeline.py  test_classifier.py  test_cli.py  test_comparator.py  test_config.py  test_database.py  test_discovery_sources.py  test_downloader.py  test_grading.py  test_json_store.py  test_metadata.py  test_photo_discovery.py  test_player_identification.py  test_tagger.py  test_threshold_manager.py  test_types.py
