[project]
name = "basketball-photos"
version = "1.0.0"
description = "NBA Photo Analyzer & Discovery System"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests", "main.py"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F401", "F402"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
